--- a/admin/index.html
+++ b/admin/index.html
@@ -1,10 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/icons8-p-ink-32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/icons8-p-ink-16.png"
+    />
+    <link rel="apple-touch-icon" sizes="96x96" href="/icons8-p-ink-96.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>admin</title>
+    <title>PATAGONIA MANAGEMENT</title>
   </head>
   <body>
     <div id="root"></div>
